Enhance CORS configuration and security filter comments